[package]
name = "lap"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Application launcher for Linux"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/lap"
repository = "https://github.com/stephaneyfx/lap.git"
keywords = ["application", "launcher"]

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.30", features = ["derive"] }
dirs = "6.0.0"
freedesktop-desktop-entry = "0.7.7"
freedesktop-icons = "0.3.1"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["advanced", "image", "tokio"] }
image = "0.25.5"
itertools = "0.14.0"
notify-rust = "4.11.5"
resvg = "0.44.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_ignored = "0.1.10"
strsim = "0.11.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"
